src/objects/peer__Loan_Application__c.object
<CustomObject>
    <fields>
        <fullName>peer__Amount_Funded__c</fullName>
        <label>Amount Funded</label>
        <summarizedField>peer__Investment_Booking__c.peer__Investment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>peer__Investment_Booking__c.peer__Stage__c</field>
            <operation>equals</operation>
            <value>Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Loan_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Amount_In_Funding__c</fullName>
        <description>Roll up summary of Investment Bookings which are in funding stage.</description>
        <label>Amount In Funding</label>
        <summarizedField>peer__Investment_Booking__c.peer__Investment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>peer__Investment_Booking__c.peer__Stage__c</field>
            <operation>equals</operation>
            <value>In Funding</value>
        </summaryFilterItems>
        <summaryForeignKey>peer__Investment_Booking__c.peer__Loan_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Amount_Time_Left__c</fullName>
        <formula>&quot;$&quot; &amp; TEXT(peer__Requested_Loan_Amount__c - peer__Amount_Funded__c) &amp; &quot; / &quot; &amp; 
TEXT(FLOOR(DATEVALUE(peer__Expiry_Date__c) -  $User.loan__Current_Branch_s_System_Date__c ))  &amp; &quot; Days &quot; &amp;
TEXT(FLOOR(MOD((peer__Expiry_Date__c - Now())*24,24)))  &amp;&quot; Hours &quot; &amp;
TEXT(FLOOR(MOD((peer__Expiry_Date__c - Now())*1440,60))) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount / Time Left</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Application_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Attractiveness_Parameter__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Admin can change this value from 0 to 10. If set higher than one it will influence attractiveness of Loan</inlineHelpText>
        <label>Attractiveness Parameter</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Binder_Id__c</fullName>
        <label>Binder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Borrower__c</fullName>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Application</relationshipLabel>
        <relationshipName>Loan_Application</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Disbursal_Date__c</fullName>
        <formula>peer__Loan__r.loan__Disbursal_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__First_Payment_Date__c</fullName>
        <formula>peer__Loan__r.loan__First_Installment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Is_Expired__c</fullName>
        <formula>If(DATEVALUE(TEXT(peer__Expiry_Date__c)) &lt; $User.loan__Current_Branch_s_System_Date__c ,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Lending_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lending Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Purpose_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Purpose</label>
        <referenceTo>loan__Loan_Purpose__c</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Loan_Purpose__c</fullName>
        <label>Loan Purpose (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Down Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>Loan_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Meet_url__c</fullName>
        <label>Meet url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Minimum_Interest_Rate__c</fullName>
        <label>Minimum Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Monthly_Payment__c</fullName>
        <formula>peer__Loan__r.loan__Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>peer__Percent_Funded__c</fullName>
        <formula>peer__Amount_In_Funding__c   / peer__Requested_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% In Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Profitable_Application__c</fullName>
        <formula>AND(peer__Requested_Loan_Amount__c &gt;= 10000,
      peer__Term__c &gt;= 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profitable Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Rating__c</fullName>
        <label>Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Remaining_Requested_Amount__c</fullName>
        <formula>peer__Requested_Loan_Amount__c  -   (peer__Amount_In_Funding__c +  peer__Amount_Funded__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Requested_Loan_Amount__c</fullName>
        <label>Requested Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Sorting_Criteria__c</fullName>
        <formula>peer__Attractiveness_Parameter__c  *  peer__Interest_Rate__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sorting Criteria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Threshold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready To Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Time_Left__c</fullName>
        <formula>IF(FLOOR(peer__Expiry_Date__c - Now()) != 0, TEXT(FLOOR(DATEVALUE(peer__Expiry_Date__c) - $User.loan__Current_Branch_s_System_Date__c)) &amp; &quot; Days &quot; , &quot;&quot;)  &amp; IF(FLOOR(MOD((peer__Expiry_Date__c - Now())*24,24)) != 0, TEXT(FLOOR(MOD((peer__Expiry_Date__c - Now())*24,24))) &amp;&quot; Hours &quot;, &quot;&quot;)  &amp; 
IF(FLOOR(MOD((peer__Expiry_Date__c - Now())*1440,60)) != 0 , TEXT(FLOOR(MOD((peer__Expiry_Date__c - Now())*1440,60)))&amp;&quot; Minutes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Left</label>
        <type>Text</type>
    </fields>
    <label>Loan Application</label>
    <listViews>
        <fullName>peer__All</fullName>
        <columns>NAME</columns>
        <columns>peer__Amount_Time_Left__c</columns>
        <columns>peer__Loan__c</columns>
        <columns>peer__Stage__c</columns>
        <columns>peer__Credit_Rating_Matrix__c</columns>
        <columns>peer__Requested_Loan_Amount__c</columns>
        <columns>peer__Attractiveness_Parameter__c</columns>
        <columns>peer__Expiry_Date__c</columns>
        <columns>peer__Term__c</columns>
        <columns>peer__Amount_Funded__c</columns>
        <columns>peer__Percent_Funded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>peer__Canceled_Loan_Apps</fullName>
        <columns>NAME</columns>
        <columns>peer__Application_Date__c</columns>
        <columns>peer__Percent_Funded__c</columns>
        <columns>peer__Requested_Loan_Amount__c</columns>
        <columns>peer__Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>peer__Stage__c</field>
            <operation>equals</operation>
            <value>Expired,Canceled,Withdrawn</value>
        </filters>
        <label>Canceled Loan Apps</label>
    </listViews>
    <listViews>
        <fullName>peer__Funded_Loan_Applications</fullName>
        <columns>NAME</columns>
        <columns>peer__Application_Date__c</columns>
        <columns>peer__Loan_Purpose_1__c</columns>
        <columns>peer__Amount_Funded__c</columns>
        <columns>peer__Requested_Loan_Amount__c</columns>
        <columns>peer__Monthly_Payment__c</columns>
        <columns>peer__Stage__c</columns>
        <columns>peer__Loan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>peer__Stage__c</field>
            <operation>equals</operation>
            <value>Funded</value>
        </filters>
        <label>Funded Loan Applications</label>
    </listViews>
    <listViews>
        <fullName>peer__In_Funding_Loan_Apps</fullName>
        <columns>NAME</columns>
        <columns>peer__Application_Date__c</columns>
        <columns>peer__Percent_Funded__c</columns>
        <columns>peer__Loan_Purpose_1__c</columns>
        <columns>peer__Requested_Loan_Amount__c</columns>
        <columns>peer__Remaining_Requested_Amount__c</columns>
        <columns>peer__Interest_Rate__c</columns>
        <columns>peer__Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>peer__Stage__c</field>
            <operation>equals</operation>
            <value>In Funding</value>
        </filters>
        <label>In Funding Loan Apps</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Loan Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>peer__Amount_funded_exceeds_requested_amount</fullName>
        <active>false</active>
        <errorConditionFormula>peer__Amount_Funded__c &gt;  peer__Requested_Loan_Amount__c</errorConditionFormula>
        <errorMessage>The amount funded exceeds the requested amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>peer__Amt_In_funding_exceeds_requested_amount</fullName>
        <active>false</active>
        <errorConditionFormula>peer__Amount_In_Funding__c  &gt;  peer__Requested_Loan_Amount__c</errorConditionFormula>
        <errorMessage>The amount funded exceeds the requested amount.</errorMessage>
    </validationRules>
</CustomObject>